--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -28,6 +28,7 @@
 		family:					('Source Sans Pro', Helvetica, sans-serif),
 		family-fixed:			('Courier New', monospace),
 		family-heading:			('Raleway', Helvetica, sans-serif),
+		family-logo: ('Dancing Script', cursive),
 		weight:					300,
 		weight-bold:			600,
 		weight-extrabold:		700,
@@ -35,7 +36,7 @@
 		weight-heading-light:	600,
 		kerning:				0.0375em,
 		kerning-heading:		0.175em,
-		kerning-heading-alt:	-0.05em
+		kerning-heading-alt:	0.04em
 	);
 
 // Palette.
