--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -433,6 +433,10 @@
 						background-position: 25% 50%;
 						background-repeat: repeat-y;
 						background-size: 40rem auto;
+						&.cta-header {
+							// border:3px solid cyan;
+							background-color: _palette(bg);
+						}
 
 						> * {
 							// max-width: 25rem;
