--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -41,14 +41,17 @@
 
 // Palette.
 	$palette: (
-		bg:						#5052b5,
-		fg:						#000000,
+		bg:						#442587,
+		fg:						#ffffff,
+		// fg-bold:				#2e2e2e,
 		fg-bold:				#ffffff,
 		fg-light:				rgba(0,0,0,0.25),
 		border:					rgba(144,144,144,0.25),
 		border-bg:				rgba(144,144,144,0.1),
-		accent:					#5e42a6,
+		// accent:					#c6c6c6,
+		accent:						#442587,
 		accent-border:			desaturate(darken(#49fcd4, 8), 30),
 		accent-alt:				desaturate(darken(#49fcd4, 10), 20),
-		accent-bg:				transparentize(#49fcd4, 0.75)
+		accent-bg:				transparentize(#49fcd4, 0.75),
+		login-btn: 		#fd5d67,
 	);
