--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -89,7 +89,7 @@
 			color: _palette(fg-bold) !important;
 
 			&:hover {
-				background-color: saturate(lighten(_palette(accent), 15), 10);
+				background-color: saturate(lighten(_palette(ux-second), 15), 10);
 			}
 
 			&:active {
