--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -14,6 +14,8 @@
 		&.app-store-btn {
 			// border:1px solid red;
 			width:140px;
+			text-decoration: none;
+			margin-bottom:20px;
 		}
 
 		img {
