--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -27,8 +27,8 @@
 	$font: (
 		family:					('Source Sans Pro', Helvetica, sans-serif),
 		family-fixed:			('Courier New', monospace),
-		family-heading:			('Raleway', Helvetica, sans-serif),
-		family-logo: ('Dancing Script', cursive),
+		family-heading:			('Source Sans Pro', Helvetica, sans-serif),
+		family-logo:			('Dancing Script', cursive),
 		weight:					300,
 		weight-bold:			600,
 		weight-extrabold:		700,
@@ -41,17 +41,24 @@
 
 // Palette.
 	$palette: (
+		ux-primary:				#442587,
+		ux-second:				#fd5d67,
+		ux-third:				#fdb9ac,
+		ux-grey:				#c6c6c6,
+		ux-alt-text:			#2e2e2e,
+		ux-white:				#ffffff,
+
 		bg:						#442587,
 		fg:						#ffffff,
-		// fg-bold:				#2e2e2e,
 		fg-bold:				#ffffff,
 		fg-light:				rgba(0,0,0,0.25),
 		border:					rgba(144,144,144,0.25),
 		border-bg:				rgba(144,144,144,0.1),
-		// accent:					#c6c6c6,
-		accent:						#442587,
-		accent-border:			desaturate(darken(#49fcd4, 8), 30),
-		accent-alt:				desaturate(darken(#49fcd4, 10), 20),
+		accent:					#442587,
+		accent-border:			desaturate(darken(#fd5d67, 8), 30),
+		accent-alt:				desaturate(darken(#fd5d67, 10), 20),
+		// accent-border:			desaturate(darken(#49fcd4, 8), 30),
+		// accent-alt:				desaturate(darken(#49fcd4, 10), 20),
 		accent-bg:				transparentize(#49fcd4, 0.75),
-		login-btn: 		#fd5d67,
+		login-btn:				#fd5d67,
 	);
