--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,9 +197,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 h1 {
   font-family: "Dancing Script", cursive;
-  font-size: 4rem;
+  font-size: 6rem;
   font-weight: 300;
-  letter-spacing: 0.04em;
+  letter-spacing: 0;
   line-height: 1.1;
   margin: 0 0 1.5rem 0;
   text-transform: none;
@@ -230,7 +230,7 @@ h6 {
 
 @media screen and (max-width: 736px) {
   h1 {
-    font-size: 3.5rem;
+    font-size: 4rem;
     line-height: 1.1;
   }
 
