--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -41,6 +41,7 @@
 
 // Palette.
 	$palette: (
+		// UX PALETTE by JASON ZIMMERMAN
 		ux-primary:				#442587,
 		ux-second:				#fd5d67,
 		ux-third:				#fdb9ac,
