--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -69,7 +69,13 @@
 		color: _palette(ux-white);
 		&.first-p {
 			color: _palette(ux-alt-text);
+			@include breakpoint('>=large') {
+				color: _palette(ux-white);
+			}
+
 		}
+
+		
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -106,8 +112,11 @@
 		font-size: 1.25rem;
 		font-weight: _font(weight-heading);
 		margin: 0 0 _size(element-margin) 0;
-		// color: _palette(ux-alt-text);
-		color: _palette(ux-white);
+		color: _palette(ux-alt-text);
+
+		@include breakpoint('>=large') {
+			color: _palette(ux-white);
+		}
 	}
 
 	h3 {
