--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -153,7 +153,7 @@
 
 		// Copyright.
 			.copyright {
-				padding: 0 $pad $pad $pad;
+				padding: 0 $pad 1rem $pad;
 			}
 
 	}
@@ -238,6 +238,7 @@
 
 				> header {
 
+//VERTICAL LINE THCKNESS
 					// Line.
 						&:before {
 							background: _palette(accent-border);
@@ -261,7 +262,8 @@
 									position: absolute;
 									top: 1rem;
 								}
-
+								
+// HEADER DOTS
 							// Terminator.
 								&:after {
 									background: _palette(accent-border);
