add 'start today' button on page bottom

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2346,6 +2346,13 @@ a.arrow:before {
   }
 }
 
+a.top-top {
+  color: #fd5d67;
+}
+a.top-top:hover {
+  color: #fdb9ac;
+}
+
 /* Gallery */
 @-moz-keyframes gallery-modal-spinner {
   0% {
