--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -305,7 +305,7 @@ blockquote {
 
 code {
   background: rgba(144, 144, 144, 0.1);
-  border-radius: 0.325rem;
+  border-radius: 0;
   font-family: "Courier New", monospace;
   font-size: 0.9rem;
   margin: 0 0.25rem;
@@ -1453,7 +1453,7 @@ hr.major {
 /* Box */
 .box {
   border: solid 2px rgba(144, 144, 144, 0.25);
-  border-radius: 0.325rem;
+  border-radius: 0;
   margin-bottom: 2rem;
   padding: 1.5rem;
 }
@@ -1481,7 +1481,7 @@ button,
   -ms-transition: background-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out, color 0.25s ease-in-out;
   transition: background-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out, color 0.25s ease-in-out;
   background-color: transparent;
-  border-radius: 0.325rem;
+  border-radius: 0;
   border: 0;
   box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
   color: #ffffff !important;
@@ -1697,7 +1697,7 @@ textarea {
   -webkit-appearance: none;
   -ms-appearance: none;
   appearance: none;
-  border-radius: 0.325rem;
+  border-radius: 0;
   border: solid 2px rgba(144, 144, 144, 0.25);
   color: inherit;
   display: block;
@@ -1812,7 +1812,7 @@ input[type=radio] + label:before {
 }
 input[type=checkbox] + label:before,
 input[type=radio] + label:before {
-  border-radius: 0.325rem;
+  border-radius: 0;
   border: solid 2px rgba(144, 144, 144, 0.25);
   content: "";
   display: inline-block;
@@ -1838,7 +1838,7 @@ input[type=radio]:focus + label:before {
 }
 
 input[type=checkbox] + label:before {
-  border-radius: 0.325rem;
+  border-radius: 0;
 }
 
 input[type=radio] + label:before {
@@ -2058,7 +2058,11 @@ input[type=radio] + label {
 }
 
 img.logo-img {
-  width: 300px;
+  max-width: 100%;
+  display: block;
+  align-self: center;
+  padding-bottom: 20px;
+  margin-top: -20px;
 }
 
 /* List */
@@ -2720,7 +2724,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   display: block;
   margin-top: 1rem;
   position: absolute;
-  width: 2px;
+  width: 7px;
 }
 #wrapper > section > header h1, #wrapper > section > header h2 {
   position: relative;
@@ -2729,7 +2733,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   background: #de535c;
   content: "";
   display: block;
-  height: 2px;
+  height: 7px;
   position: absolute;
   top: 1rem;
 }
@@ -2737,7 +2741,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   background: #de535c;
   border-radius: 0.5rem;
   content: "";
-  display: block;
+  display: none;
   height: 0.5rem;
   position: absolute;
   top: 0.75rem;
@@ -2762,7 +2766,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   align-items: center;
 }
 #wrapper > section.intro > header {
-  padding-top: 4rem;
+  padding-top: 3rem;
   width: 100%;
 }
 #wrapper > section.intro > header > * {
@@ -2783,7 +2787,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   border-radius: 0.5rem;
   bottom: -1.5rem;
   content: "";
-  display: block;
+  display: none;
   height: 0.5rem;
   position: absolute;
   width: 0.5rem;
@@ -2838,7 +2842,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   }
 }
 #wrapper > section:last-of-type > header:after {
-  left: calc(50vw - 5rem - 0.25rem + 1px);
+  left: calc(50vw - 5rem - 0.25rem + 3.5px);
 }
 #wrapper .copyright {
   padding: 0 5rem;
@@ -2888,7 +2892,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
 }
 @media screen and (max-width: 1280px) {
   #wrapper > section:last-of-type > header:after {
-    left: calc(50vw - 4rem - 0.25rem + 1px);
+    left: calc(50vw - 4rem - 0.25rem + 3.5px);
   }
 }
 @media screen and (max-width: 1280px) {
@@ -2941,6 +2945,8 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   }
   #wrapper > section > header.cta-header {
     background-color: #442587;
+    display: flex;
+    flex-direction: column;
   }
   #wrapper > section > header > :last-child {
     margin-bottom: 0;
@@ -3016,9 +3022,6 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section > footer {
     padding: 0 4rem 4rem 4rem;
   }
-  #wrapper > section.intro > header {
-    padding: 8rem 4rem 5rem 4rem;
-  }
   #wrapper .copyright {
     padding: 0 4rem 1rem 4rem;
   }
@@ -3042,9 +3045,6 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section > footer {
     padding: 0 2rem 3rem 2rem;
   }
-  #wrapper > section.intro > header {
-    padding: 5.5rem 2rem 2.5rem 2rem;
-  }
   #wrapper .copyright {
     padding: 0 2rem 1rem 2rem;
   }
@@ -3067,9 +3067,6 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   }
   #wrapper > section > footer {
     padding: 0 1.5rem 2.25rem 1.5rem;
-  }
-  #wrapper > section.intro > header {
-    padding: 4.875rem 1.5rem 1.875rem 1.5rem;
   }
   #wrapper .copyright {
     padding: 0 1.5rem 1rem 1.5rem;
