--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -12,13 +12,14 @@
 
 // Size.
 	$size: (
-		border-radius:			0.325rem,
+		// border-radius:			0.325rem,
+		border-radius:			0,
 		element-height:			3rem,
 		element-margin:			2rem,
 		header-width:			25rem,
 		subheader-width:		22rem,
 		content-width:			60rem,
-		line-width:				2px,
+		line-width:				7px,
 		form-gutter:			2rem,
 		gallery-gutter:			1.25rem,
 	);
