--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -305,7 +305,7 @@ blockquote {
 
 code {
   background: rgba(144, 144, 144, 0.1);
-  border-radius: 0;
+  border-radius: 5px;
   font-family: "Courier New", monospace;
   font-size: 0.9rem;
   margin: 0 0.25rem;
@@ -1453,7 +1453,7 @@ hr.major {
 /* Box */
 .box {
   border: solid 2px rgba(144, 144, 144, 0.25);
-  border-radius: 0;
+  border-radius: 5px;
   margin-bottom: 2rem;
   padding: 1.5rem;
 }
@@ -1481,7 +1481,7 @@ button,
   -ms-transition: background-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out, color 0.25s ease-in-out;
   transition: background-color 0.25s ease-in-out, box-shadow 0.25s ease-in-out, color 0.25s ease-in-out;
   background-color: transparent;
-  border-radius: 0;
+  border-radius: 5px;
   border: 0;
   box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
   color: #ffffff !important;
@@ -1504,8 +1504,8 @@ input[type=reset]:hover,
 input[type=button]:hover,
 button:hover,
 .button:hover {
-  box-shadow: inset 0 0 0 2px #e7404b;
-  color: #e7404b !important;
+  box-shadow: inset 0 0 0 2px #fd5d67;
+  color: #442587 !important;
 }
 input[type=submit]:active,
 input[type=reset]:active,
@@ -1575,7 +1575,6 @@ input[type=button].primary,
 button.primary,
 .button.primary {
   background-color: #fd5d67;
-  box-shadow: none;
   color: #ffffff !important;
 }
 input[type=submit].primary:hover,
@@ -1583,7 +1582,7 @@ input[type=reset].primary:hover,
 input[type=button].primary:hover,
 button.primary:hover,
 .button.primary:hover {
-  background-color: #ffa8ad;
+  background-color: #fdb9ac;
 }
 input[type=submit].primary:active,
 input[type=reset].primary:active,
@@ -1697,7 +1696,7 @@ textarea {
   -webkit-appearance: none;
   -ms-appearance: none;
   appearance: none;
-  border-radius: 0;
+  border-radius: 5px;
   border: solid 2px rgba(144, 144, 144, 0.25);
   color: inherit;
   display: block;
@@ -1812,7 +1811,7 @@ input[type=radio] + label:before {
 }
 input[type=checkbox] + label:before,
 input[type=radio] + label:before {
-  border-radius: 0;
+  border-radius: 5px;
   border: solid 2px rgba(144, 144, 144, 0.25);
   content: "";
   display: inline-block;
@@ -1838,7 +1837,7 @@ input[type=radio]:focus + label:before {
 }
 
 input[type=checkbox] + label:before {
-  border-radius: 0;
+  border-radius: 5px;
 }
 
 input[type=radio] + label:before {
@@ -2435,6 +2434,12 @@ a.top-top:hover {
   object-fit: cover;
   object-position: center;
   width: 100%;
+  border: 1px dashed #fd5d67;
+  border-radius: 5px;
+  padding: 1rem;
+}
+.gallery a img:hover {
+  border: 1px dashed #ffffff;
 }
 .gallery a.landscape {
   width: 100%;
