--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -39,8 +39,8 @@
 
 
 		&:hover {
-			box-shadow: inset 0 0 0 2px _palette(accent-alt);
-			color: _palette(accent-alt) !important;
+			box-shadow: inset 0 0 0 2px _palette(ux-second);
+			color: _palette(ux-primary) !important;
 		}
 
 		&:active {
@@ -85,11 +85,13 @@
 
 		&.primary {
 			background-color: _palette(login-btn);
-			box-shadow: none;
+			// box-shadow: none;
 			color: _palette(fg-bold) !important;
 
 			&:hover {
-				background-color: saturate(lighten(_palette(ux-second), 15), 10);
+				// color: black !important;
+				background-color: _palette(ux-third);
+				// background-color: saturate(lighten(_palette(ux-second), 15), 10);
 			}
 
 			&:active {
