--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -13,7 +13,7 @@
 // Size.
 	$size: (
 		// border-radius:			0.325rem,
-		border-radius:			0,
+		border-radius:			5px,
 		element-height:			3rem,
 		element-margin:			2rem,
 		header-width:			25rem,
