--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,14 +177,6 @@ p {
   margin: 0 0 2rem 0;
   color: #ffffff;
 }
-p.first-p {
-  color: #2e2e2e;
-}
-@media screen and (min-width: 1153px) {
-  p.first-p {
-    color: #ffffff;
-  }
-}
 
 h1, h2, h3, h4, h5, h6 {
   color: #ffffff;
@@ -192,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   letter-spacing: 0.175em;
   line-height: 1.75;
-  margin: 0 0 1.5rem 0;
+  margin: 0;
   text-transform: uppercase;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -209,11 +201,14 @@ h1 {
   margin: 0 0 1.5rem 0;
   text-transform: none;
 }
+h1.logo-text {
+  display: none;
+}
+
 h2 {
   font-size: 1.25rem;
   font-weight: 800;
   margin: 0 0 2rem 0;
-  color: #2e2e2e;
 }
 @media screen and (min-width: 1153px) {
   h2 {
@@ -247,7 +242,6 @@ h6 {
   h2 {
     font-size: 1.25rem;
     line-height: 1.7;
-    color: #2e2e2e;
   }
 
   h3 {
@@ -1909,9 +1903,7 @@ input[type=radio] + label {
   position: relative;
 }
 .image.app-store-btn {
-  width: 140px;
   text-decoration: none;
-  margin-bottom: 20px;
 }
 .image img {
   display: block;
@@ -2060,8 +2052,12 @@ img.logo-img {
   max-width: 100%;
   display: block;
   align-self: center;
-  padding-bottom: 20px;
-  margin-top: -20px;
+  z-index: 3;
+}
+@media screen and (min-width: 1153px) {
+  img.logo-img {
+    padding-bottom: 20px;
+  }
 }
 
 /* List */
@@ -2667,15 +2663,9 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
 #wrapper {
   position: relative;
   width: 100vw;
-  padding: 0 0 10rem 0;
+  padding: 0 0 1rem 0;
 }
 #wrapper:before {
-  background-attachment: fixed;
-  background-color: #442587;
-  background-position: -50% 10%;
-  background-repeat: repeat-y;
-  background-size: 75% auto;
-  content: "";
   display: block;
   height: 100%;
   left: 0;
@@ -2712,6 +2702,12 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   grid-area: content;
   max-width: 60rem;
   position: relative;
+}
+#wrapper section > .content.store-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 0 0 1rem 0;
 }
 #wrapper section > footer {
   grid-area: footer;
@@ -2781,7 +2777,6 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   left: auto;
 }
 #wrapper > section.intro > .content {
-  height: 100vh;
   max-width: none;
 }
 #wrapper > section:last-of-type > header:before {
@@ -2854,7 +2849,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
 }
 @media screen and (max-width: 1280px) {
   #wrapper {
-    padding: 0 0 8rem 0;
+    padding: 0 0 1rem 0;
   }
   #wrapper section {
     margin: 6rem 0 0 0;
@@ -2907,6 +2902,8 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
 }
 @media screen and (max-width: 1152px) {
   #wrapper {
+    margin: 0 auto;
+    max-width: 600px;
     padding: 0;
   }
   #wrapper:before {
@@ -2952,6 +2949,10 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
     background-color: #442587;
     display: flex;
     flex-direction: column;
+    padding: 0;
+  }
+  #wrapper > section > header.store-buttons {
+    background-color: #fdb9ac;
   }
   #wrapper > section > header > :last-child {
     margin-bottom: 0;
@@ -2987,7 +2988,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
     margin-bottom: 0;
   }
   #wrapper > section.intro > header {
-    margin-bottom: 0;
+    margin-bottom: 2rem;
   }
   #wrapper > section.intro > header ul.actions {
     display: none;
@@ -3012,20 +3013,25 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper section {
     margin: 6rem 0 0 0;
   }
+  #wrapper header.store-buttons {
+    margin: 1rem 0;
+  }
   #wrapper > section {
     margin: 0;
   }
   #wrapper > section > header {
-    padding: 4rem 4rem;
+    padding: 0;
+    background: none;
+    display: none;
   }
   #wrapper > section > .content {
-    padding: 4rem 4rem;
+    padding: 0 4rem 4rem 4rem;
   }
   #wrapper > section > .content > section {
     margin: 4rem 0;
   }
   #wrapper > section > footer {
-    padding: 0 4rem 4rem 4rem;
+    padding: 0 4rem 0 4rem;
   }
   #wrapper .copyright {
     padding: 0 4rem 1rem 4rem;
@@ -3035,20 +3041,25 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper section {
     margin: 3rem 0 0 0;
   }
+  #wrapper header.store-buttons {
+    margin: 1rem 0;
+  }
   #wrapper > section {
     margin: 0;
   }
   #wrapper > section > header {
-    padding: 3rem 2rem;
+    padding: 0;
+    background: none;
+    display: none;
   }
   #wrapper > section > .content {
-    padding: 3rem 2rem;
+    padding: 0 2rem 2rem 2rem;
   }
   #wrapper > section > .content > section {
     margin: 3rem 0;
   }
   #wrapper > section > footer {
-    padding: 0 2rem 3rem 2rem;
+    padding: 0 2rem 0 2rem;
   }
   #wrapper .copyright {
     padding: 0 2rem 1rem 2rem;
@@ -3058,20 +3069,25 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper section {
     margin: 2.25rem 0 0 0;
   }
+  #wrapper header.store-buttons {
+    margin: 1rem 0;
+  }
   #wrapper > section {
     margin: 0;
   }
   #wrapper > section > header {
-    padding: 2.25rem 1.5rem;
+    padding: 0;
+    background: none;
+    display: none;
   }
   #wrapper > section > .content {
-    padding: 2.25rem 1.5rem;
+    padding: 0 1.5rem 1.5rem 1.5rem;
   }
   #wrapper > section > .content > section {
     margin: 2.25rem 0;
   }
   #wrapper > section > footer {
-    padding: 0 1.5rem 2.25rem 1.5rem;
+    padding: 0 1.5rem 0 1.5rem;
   }
   #wrapper .copyright {
     padding: 0 1.5rem 1rem 1.5rem;
