fix headers, center toptoparrow, etc

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -208,7 +208,7 @@ h1.logo-text {
 h2 {
   font-size: 1.25rem;
   font-weight: 800;
-  margin: 0 0 2rem 0;
+  margin: 1rem 0 2rem 0;
 }
 @media screen and (min-width: 1153px) {
   h2 {
@@ -2134,6 +2134,7 @@ ul.actions {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
+  justify-content: center;
   cursor: default;
   list-style: none;
   margin-left: -1rem;
@@ -3022,7 +3023,6 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section > header {
     padding: 0;
     background: none;
-    display: none;
   }
   #wrapper > section > .content {
     padding: 0 4rem 4rem 4rem;
@@ -3050,7 +3050,6 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section > header {
     padding: 0;
     background: none;
-    display: none;
   }
   #wrapper > section > .content {
     padding: 0 2rem 2rem 2rem;
@@ -3078,7 +3077,6 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section > header {
     padding: 0;
     background: none;
-    display: none;
   }
   #wrapper > section > .content {
     padding: 0 1.5rem 1.5rem 1.5rem;
