--- a/assets/sass/components/_actions.scss
+++ b/assets/sass/components/_actions.scss
@@ -8,6 +8,7 @@
 
 	ul.actions {
 		@include vendor('display', 'flex');
+		justify-content: center;
 		cursor: default;
 		list-style: none;
 		margin-left: (_size(element-margin) * -0.5);
