--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -135,7 +135,7 @@
 					// padding: ($pad * $tbFactor) $pad;
 					padding:0;
 					background:none;
-					display:none;
+					// display:none;
 				}
 
 				> .content {
