--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -102,8 +102,8 @@
 	h2 {
 		font-size: 1.25rem;
 		font-weight: _font(weight-heading);
-		margin: 0 0 _size(element-margin) 0;
-		// color: _palette(ux-alt-text);
+		margin: 1rem 0 _size(element-margin) 0;
+		// text-decoration: overline;
 
 		@include breakpoint('>=large') {
 			color: _palette(ux-white);
