--- a/assets/sass/components/_gallery.scss
+++ b/assets/sass/components/_gallery.scss
@@ -21,6 +21,7 @@
 
 		display: flex;
 		flex-wrap: wrap;
+		justify-content: center;
 		margin: ($gutter * -1) 0 0 ($gutter * -1);
 		width: calc(100% + #{$gutter});
 
