--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -20,7 +20,7 @@
 		background-color: transparent;
 		border-radius: _size(border-radius);
 		border: 0;
-		box-shadow: inset 0 0 0 2px _palette(border);
+		box-shadow: inset 0 0 0 2px _palette(ux-third);
 		color: _palette(fg-bold) !important;
 		cursor: pointer;
 		display: inline-block;
@@ -35,7 +35,6 @@
 		text-decoration: none;
 		text-transform: uppercase;
 		white-space: nowrap;
-
 
 
 		&:hover {
@@ -85,8 +84,15 @@
 
 		&.primary {
 			background-color: _palette(login-btn);
-			// box-shadow: none;
 			color: _palette(fg-bold) !important;
+			width: 200px;
+			// height: 61px;
+
+			&.log-in-btn {
+				// width:100%;
+				// margin:-43px 0;
+
+			}
 
 			&:hover {
 				// color: black !important;
