--- a/assets/sass/components/_icons.scss
+++ b/assets/sass/components/_icons.scss
@@ -32,7 +32,7 @@
 				}
 
 				&:hover {
-					background-color: _palette(border-bg);
+					background-color: _palette(ux-primary);
 				}
 			}
 		}
