--- a/assets/sass/components/_gallery.scss
+++ b/assets/sass/components/_gallery.scss
@@ -264,13 +264,14 @@
 		max-width:300px;
 		max-height:300px;
 		display:none;
+		opacity:0;
 
 		&.slides-active {
 			display:block;
+			opacity:0;
 			// max-width:77%;
 			// width:100px;
 			// height:100px;
 		}
 	}
 }
-
