feature freeze, update readme, update contact section links

--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -517,7 +517,7 @@
 
 					> .content {
 						> :last-child {
-							margin-bottom: 2rem;
+							// margin-bottom: 2rem;
 						}
 
 						> section {
