--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -763,3 +763,37 @@
 
 			}
 		}
+
+		// HIDDEN ABOUT PAGE
+		#about header p {
+			font-size:.65rem;
+			@include breakpoint('>=large') {
+				margin-right:4px;
+				font-size:.55rem;
+			}
+		}
+
+		.about-content {
+			display:flex;
+			flex-direction: column;
+			align-items:center;
+
+			i {
+				// margin-right:20px;
+				margin-bottom:-8px;
+			}
+
+			p {
+				line-height:1.5;
+				text-align: center;
+			}
+			&.hidden {
+				display:none;
+			}
+		}
+
+		#lambda-logo {
+			&:hover {
+				filter:invert(1);
+			}
+		}
