--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2126,9 +2126,6 @@ ul.items > li {
   padding-left: 0;
   margin: 0 0 3rem 0;
 }
-ul.items > li > h3 {
-  margin: 0 0 1rem 0;
-}
 ul.items > li > :last-child {
   margin-bottom: 0;
 }
@@ -2909,10 +2906,10 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   position: absolute;
   width: 7px;
 }
-#wrapper > section > header h1, #wrapper > section > header h2 {
+#wrapper > section > header h1, #wrapper > section > header h2, #wrapper > section > header h4 {
   position: relative;
 }
-#wrapper > section > header h1:before, #wrapper > section > header h2:before {
+#wrapper > section > header h1:before, #wrapper > section > header h2:before, #wrapper > section > header h4:before {
   background: #de535c;
   content: "";
   display: block;
@@ -2920,7 +2917,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   position: absolute;
   top: 1rem;
 }
-#wrapper > section > header h1:after, #wrapper > section > header h2:after {
+#wrapper > section > header h1:after, #wrapper > section > header h2:after, #wrapper > section > header h4:after {
   background: #de535c;
   border-radius: 0.5rem;
   content: "";
@@ -3002,11 +2999,17 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   height: calc(100% + 10rem);
   left: calc(50vw - 5rem);
 }
-#wrapper > section > header h1:before, #wrapper > section > header h2:before {
+#wrapper > section > header h1:before, #wrapper > section > header h2:before, #wrapper > section > header h4:before {
   right: -5rem;
-  width: 2.5rem;
+  width: 3.75rem;
+  top: 15px;
 }
-#wrapper > section > header h1:after, #wrapper > section > header h2:after {
+@media screen and (max-width: 1152px) {
+  #wrapper > section > header h1:before, #wrapper > section > header h2:before, #wrapper > section > header h4:before {
+    display: none;
+  }
+}
+#wrapper > section > header h1:after, #wrapper > section > header h2:after, #wrapper > section > header h4:after {
   right: -2.5rem;
 }
 #wrapper > section > .content > section {
@@ -3050,19 +3053,31 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
     height: calc(100% + 8rem);
     left: calc(50vw - 4rem);
   }
-  #wrapper > section > header h1:before, #wrapper > section > header h2:before {
+  #wrapper > section > header h1:before, #wrapper > section > header h2:before, #wrapper > section > header h4:before {
     right: -4rem;
-    width: 2rem;
+    width: 3rem;
+    top: 15px;
   }
-  #wrapper > section > header h1:after, #wrapper > section > header h2:after {
+}
+@media screen and (max-width: 1280px) and (max-width: 1152px) {
+  #wrapper > section > header h1:before, #wrapper > section > header h2:before, #wrapper > section > header h4:before {
+    display: none;
+  }
+}
+@media screen and (max-width: 1280px) {
+  #wrapper > section > header h1:after, #wrapper > section > header h2:after, #wrapper > section > header h4:after {
     right: -2rem;
   }
+}
+@media screen and (max-width: 1280px) {
   #wrapper > section > .content > section {
     left: calc(-50vw - 4rem);
   }
   #wrapper > section > .content > section > header {
     width: 30rem;
   }
+}
+@media screen and (max-width: 1280px) {
   #wrapper > section.intro > header:before {
     margin-left: calc(50vw - 8rem);
   }
