--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -53,7 +53,7 @@
 				margin: 0 0 (_size(element-margin) * 1.5) 0;
 
 				> h3 {
-					margin: 0 0 (_size(element-margin) * 0.5) 0;
+					// margin: 0 0 (_size(element-margin) * 0.5) 0;
 				}
 
 				> :last-child {
